# OpenSearch

./: .gitignore  CHANGELOG.md  build.gradle  gradle.properties  gradlew  settings.gradle
buildSrc/: build.gradle
buildSrc/src/testKit/opensearch.build/: build.gradle
buildSrc/src/testKit/thirdPartyAudit/: build.gradle
distribution/src/config/: jvm.options
gradle/: libs.versions.toml
libs/arrow-spi/: build.gradle
libs/grok/: build.gradle
modules/ingest-geoip/: build.gradle
modules/parquet-data-format/src/main/java/: ParquetSettings.java
modules/parquet-data-format/src/main/rust/: Cargo.toml
modules/parquet-data-format/src/main/rust/src/: lib.rs  parquet_merge.rs  reader_heap.rs  writer_properties_builder.rs
plugins/discovery-gce/: build.gradle
plugins/engine-datafusion/: Cargo.toml  README.md
plugins/engine-datafusion/jni/: Cargo.toml
plugins/engine-datafusion/jni/src/: jemalloc_monitor.rs  lib.rs  listing_table.rs  memory.rs  query_executor.rs
plugins/ingest-attachment/: build.gradle
plugins/repository-azure/: build.gradle
plugins/repository-gcs/: build.gradle
plugins/repository-hdfs/: build.gradle
sandbox/libs/composite-engine-lib/: build.gradle
sandbox/libs/dataformat-native/rust/: Cargo.toml
sandbox/plugins/analytics-backend-datafusion/rust/: Cargo.toml
sandbox/plugins/analytics-engine/: build.gradle
sandbox/plugins/composite-engine/: build.gradle
sandbox/qa/test-ppl-frontend/: build.gradle
server/: build.gradle
test/fixtures/hdfs-fixture/: build.gradle
test/framework/: build.gradle
(+417 files in other folders)
